unpackaged/main/default/objects/OrderItem/fields/Temperature_Tech__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Tech__c</fullName>
    <formula>SBQQ__QuoteLine__r.Temperature_Tech__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temperature Tech</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>