unpackaged/main/default/objects/OrderItem/fields/Temperature_Tech_Template__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Tech_Template__c</fullName>
    <formula>Text(SBQQ__QuoteLine__r.Temperature__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temperature Tech Template</label>
    <type>Text</type>
</CustomField>