unpackaged/main/default/objects/OrderItem/fields/Uplift_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Eligible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Uplift Eligible</label>
    <type>Checkbox</type>
</CustomField>